# Monado

./: CMakeLists.txt
cmake/: MonadoSetOptions.cmake
doc/: implementing-openvr-interfaces.md  mainpage.md  understanding-targets.md
src/xrt/auxiliary/: CMakeLists.txt
src/xrt/auxiliary/bindings/: CMakeLists.txt  bindings.py
src/xrt/auxiliary/render/: CMakeLists.txt  render_buffer.c  render_compute.c  render_distortion.c  render_gfx.c  render_interface.h  render_resources.c  render_sub_alloc.c  render_util.c
src/xrt/auxiliary/render/shaders/: CMakeLists.txt  blit.comp  mesh.vert  render_shaders.c  render_shaders_interface.h
src/xrt/auxiliary/util/: CMakeLists.txt  u_str_to_enum.c  u_str_to_enum.h  u_trace_marker.h  u_visibility_mask.c  u_visibility_mask.h  u_weak_ptr.hpp
src/xrt/auxiliary/vk/: CMakeLists.txt  vk_bundle_init.c  vk_cmd.c  vk_cmd.h  vk_format.c  vk_format.h  vk_generate_inc_files.py  vk_helpers.h  vk_surface_info.c  vk_surface_info.h
src/xrt/base/: CMakeLists.txt  b_session.c
src/xrt/compositor/: CMakeLists.txt
src/xrt/compositor/client/: comp_vk_client.c
src/xrt/compositor/main/: CMakeLists.txt  comp_compositor.c  comp_mirror_to_debug_gui.c  comp_renderer.c  comp_target_swapchain.c  comp_target_swapchain.h  comp_window_mswin.c  comp_window_peek.c
src/xrt/compositor/null/: null_compositor.c  null_compositor.h
src/xrt/compositor/util/: CMakeLists.txt  comp_high_level_render.c  comp_high_level_render.h  comp_render.h  comp_render_cs.c  comp_render_gfx.c
src/xrt/drivers/: CMakeLists.txt
src/xrt/drivers/pssense/: pssense_driver.c  pssense_led_model.h  pssense_protocol.h
src/xrt/drivers/rift/: rift_driver.c  rift_interface.h
src/xrt/drivers/simulated/: simulated_hmd.c  simulated_interface.h
src/xrt/drivers/steamvr_lh/: steamvr_lh.cpp
src/xrt/include/tracking/: t_constellation.h
src/xrt/include/xrt/: xrt_compositor.h  xrt_config_build.h.cmake_in
src/xrt/ipc/server/: ipc_server_handler.c
src/xrt/state_trackers/: CMakeLists.txt
src/xrt/state_trackers/openvr/: CMakeLists.txt  openvr_devices.cpp  openvr_devices.hpp  openvr_events.cpp  openvr_events.hpp  openvr_negotiate.cpp
src/xrt/state_trackers/openvr/common/: openvr_error.cpp  openvr_error.hpp  openvr_logger.cpp  openvr_logger.hpp  openvr_math.cpp  openvr_math.hpp
src/xrt/state_trackers/openvr/compositor/: openvr_compositor.cpp  openvr_compositor.hpp  openvr_compositor_vulkan.cpp
src/xrt/state_trackers/openvr/interfaces/: XRTVRChaperone.cpp  XRTVRChaperone.hpp  XRTVRChaperoneSetup.cpp  XRTVRChaperoneSetup.hpp  XRTVRClientCore.cpp  XRTVRClientCore.hpp  XRTVRCompositor.cpp  XRTVRCompositor.hpp  XRTVRRenderModels.cpp  XRTVRRenderModels.hpp  XRTVRSystem.cpp  XRTVRSystem.hpp
src/xrt/state_trackers/openvr/interfaces/old/: XRTVRChaperoneSetup_005.hpp  XRTVRChaperone_003.hpp  XRTVRCompositor_022.hpp  XRTVRCompositor_024.hpp  XRTVRCompositor_026.hpp  XRTVRCompositor_027.hpp  XRTVRCompositor_028.hpp  XRTVRSystem_019.hpp  XRTVRSystem_020.hpp  XRTVRSystem_021.hpp  XRTVRSystem_023.hpp
src/xrt/state_trackers/oxr/: oxr_api_hand_tracking.c  oxr_api_instance.c  oxr_api_session.c  oxr_api_verify.h  oxr_future.c  oxr_hand_tracking.c  oxr_hand_tracking.h  oxr_instance.c  oxr_objects.h  oxr_session.c  oxr_verify.c  oxr_xdev.c
src/xrt/state_trackers/oxr/actions/: oxr_api_action.c  oxr_input.c
src/xrt/state_trackers/oxr/common/: oxr_forward_declarations.h  oxr_handle_base.c  oxr_handle_base.h
src/xrt/state_trackers/steamvr_drv/: CMakeLists.txt
src/xrt/targets/: CMakeLists.txt
src/xrt/targets/common/: target_builder_interface.h  target_builder_rift.c  target_lists.c
src/xrt/targets/openvr/: CMakeLists.txt  libopenvr.def  libopenvr.version  target.c  version.txt  version.txt.license
src/xrt/targets/sdl_test/: sdl_compositor.c
src/xrt/tracking/constellation/: CMakeLists.txt  constellation_debug_scribble.cpp  constellation_tracker_rerun.cpp  constellation_tracker_rerun.hpp  correspondence_search.c  pose_metrics.c  pose_optimize.cpp  pose_optimize.h  t_constellation_tracker.cpp  t_constellation_tracker_dataset.cpp  t_constellation_tracker_dataset.hpp  t_constellation_tracker_internal.hpp  t_led_sync_refinement.c  t_led_sync_refinement.h
tests/: CMakeLists.txt
